testsuite/tests/th/T20179.hs
{-# LANGUAGE TemplateHaskell #-}
module Bug where

$(let slurmp :: [Maybe]
      slurmp = []

   in pure [])
